# ckanext-charts

./: .editorconfig  .pre-commit-config.yaml  404.html  CHANGELOG.md  MANIFEST.in  Makefile  README.md  dev-requirements.txt  gulpfile.js  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  test.ini
.github/workflows/: test.yml
assets/: _mkdocstrings.css
caching/: index.html
caching/base/: index.html
caching/file/: index.html
caching/redis/: index.html
ckanext/charts/: cache.py  chart_builder.py  cli.py  config.py  config_declaration.yaml  config_schema.yaml  const.py  exception.py  fetchers.py  helpers.py  plugin.py  types.py  utils.py  views.py
ckanext/charts/assets/: script.js  webassets.yml
ckanext/charts/assets/css/: charts.css
ckanext/charts/assets/js/: charts-chartjs.js  charts-conditional.js  charts-filters.js  charts-form.js  charts-global.js  charts-render-chartjs.js  charts-render-echarts.js  charts-render-observable.js  charts-render-plotly.js  charts-select.js
ckanext/charts/chart_builders/: __init__.py  base.py  chartjs.py  observable.py  plotly.py
ckanext/charts/chart_builders/echarts/: __init__.py  bar.py  base.py  line.py  pie.py
ckanext/charts/chart_builders/plotly/: __init__.py  bar.py  base.py  choropleth.py  line.py  pie.py  scatter.py
ckanext/charts/implementations/: __init__.py  resource_controller.py  signal.py
ckanext/charts/logic/: action.py  schema.py  validators.py
ckanext/charts/templates/: page.html
ckanext/charts/templates/charts/: chartjs.html  charts_builder_form.html  charts_builder_view.html  charts_form.html  charts_view.html  config.html
ckanext/charts/templates/charts/snippets/: chart_create_form.html  chartjs_chart.html  charts_form_field.html  (+8 more)
ckanext/charts/templates/package/: edit_view.html  new_view.html
ckanext/charts/tests/: conftest.py  helpers.py  test_builders.py  test_cache.py  test_fetchers.py  test_plugin.py  test_view.py
ckanext/charts/tests/data/: sample.xls  sample.xml
ckanext/charts/theme/: charts.scss  mixins.scss  variables.scss
configuration/: index.html
docs/: configuration.md  helpers.md  install.md  troubleshooting.md  usage.md  utils.md  validators.md
docs/caching/: base.md  file.md  index.md  redis.md
docs/engines/: chartjs.md  custom.md  index.md  observable.md  plotly.md
docs/engines/chartjs/: bar.md  bubble.md  doughnut.md  hbar.md  index.md  line.md  pie.md  radar.md  scatter.md
docs/engines/echarts/: bar.md  index.md  line.md  pie.md
docs/engines/observable/: bar.md  hbar.md  index.md  line.md  pie.md  scatter.md
docs/engines/plotly/: bar.md  choropleth.md  hbar.md  index.md  line.md  pie.md  scatter.md
docs/fetchers/: base.md  datastore.md  file.md  hardcode.md  index.md  url.md
engines/: index.html
engines/chartjs/: index.html
engines/chartjs/bar/: index.html
engines/chartjs/bubble/: index.html
engines/chartjs/doughnut/: index.html
engines/chartjs/hbar/: index.html
engines/chartjs/line/: index.html
engines/chartjs/pie/: index.html
engines/chartjs/radar/: index.html
engines/chartjs/scatter/: index.html
engines/custom/: index.html
engines/echarts/: index.html
engines/echarts/bar/: index.html
engines/echarts/line/: index.html
engines/echarts/pie/: index.html
engines/observable/: index.html
engines/observable/bar/: index.html
engines/observable/hbar/: index.html
engines/observable/line/: index.html
engines/observable/pie/: index.html
engines/observable/scatter/: index.html
engines/plotly/: index.html
engines/plotly/bar/: index.html
engines/plotly/choropleth/: index.html
engines/plotly/hbar/: index.html
engines/plotly/line/: index.html
engines/plotly/pie/: index.html
engines/plotly/scatter/: index.html
fetchers/: index.html
fetchers/base/: index.html
fetchers/datastore/: index.html
fetchers/file/: index.html
fetchers/hardcode/: index.html
fetchers/url/: index.html
helpers/: index.html
install/: index.html
mkdocstrings_handlers/ChartFieldsHandler/: __init__.py  handler.py
mkdocstrings_handlers/ChartFieldsHandler/templates/material/: fields.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/caching/: index.html
site/caching/base/: index.html
site/caching/file/: index.html
site/caching/redis/: index.html
site/configuration/: index.html
site/engines/: index.html
site/engines/chartjs/: index.html
site/engines/chartjs/bar/: index.html
site/engines/chartjs/bubble/: index.html
site/engines/chartjs/doughnut/: index.html
site/engines/chartjs/hbar/: index.html
site/engines/chartjs/line/: index.html
site/engines/chartjs/pie/: index.html
site/engines/chartjs/radar/: index.html
site/engines/chartjs/scatter/: index.html
site/engines/custom/: index.html
site/engines/echarts/: index.html
site/engines/echarts/bar/: index.html
site/engines/echarts/line/: index.html
site/engines/echarts/pie/: index.html
site/engines/observable/: index.html
site/engines/observable/bar/: index.html
site/engines/observable/hbar/: index.html
site/engines/observable/line/: index.html
site/engines/observable/pie/: index.html
site/engines/observable/scatter/: index.html
site/engines/plotly/: index.html
site/engines/plotly/bar/: index.html
site/engines/plotly/choropleth/: index.html
site/engines/plotly/hbar/: index.html
site/engines/plotly/line/: index.html
site/engines/plotly/pie/: index.html
site/engines/plotly/scatter/: index.html
site/fetchers/: index.html
site/fetchers/base/: index.html
site/fetchers/datastore/: index.html
site/fetchers/file/: index.html
site/fetchers/hardcode/: index.html
site/fetchers/url/: index.html
site/helpers/: index.html
site/install/: index.html
site/search/: search_index.json
site/troubleshooting/: index.html
site/usage/: index.html
site/utils/: index.html
site/validators/: index.html
troubleshooting/: index.html
usage/: index.html
utils/: index.html
validators/: index.html
(+9 files in other folders)
