[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-charts"
description = ""
keywords = ["CKAN", "charts", "visualization"]
readme = "README.md"
authors = [
    {name = "DataShades", email = "datashades@linkdigital.com.au"},
    {name = "Sergey Motornyuk", email = "sergey.motornyuk@linkdigital.com.au"},
    {name = "Oleksandr Cherniavskyi", email = "mutantsan@gmail.com"},
]
maintainers = [
    {name = "DataShades", email = "datashades@linkdigital.com.au"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
             "typing-extensions>=4.3.0",
             "pandas>=2.0.0",
             "plotly>=5.21.0",
             "openpyxl>=3.1.2",
             "xlrd>=2.0.1",
             "humanize>=4.10.0",
             "pycountry>=24.6.1",
             "ckanext-scheming",
]
license = {text = "AGPL"}
requires-python = ">=3.11"
version = "1.10.2"

[project.optional-dependencies]
pyarrow = ["pyarrow>=16.0.0,<17.0.0"]
test = ["pytest-ckan", "ckanext-toolbelt", "requests-mock"]
dev = ["pytest-ckan", "ckanext-toolbelt", "requests-mock"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings", "mkdocstrings-python", "pymdown-extensions"]

[project.entry-points."ckan.plugins"]
charts_view = "ckanext.charts.plugin:ChartsViewPlugin"
charts_builder_view = "ckanext.charts.plugin:ChartsBuilderViewPlugin"

[project.entry-points."mkdocstrings.python.templates"]
ChartFieldsHandler = "mkdocstrings_handlers.ChartFieldsHandler:get_templates_path"

[project.entry-points."babel.extractors"]
ckan = "ckan.lib.extract:extract_ckan"

[project.urls]
Homepage = "https://github.com/DataShades/ckanext-charts"

[tool.setuptools.packages]
find = {}

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "B",
    "BLE",
    "C40",
    "C90",
    "COM",
    "E",
    "W",
    "F",
    "G",
    "N",
    "PL",
    "PT",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "SIM",
    "T10",
    "T20",
    "TID",
    "TRY",
    "UP",
]

ignore = [
    "E712",
    "PLC1901",
    "TRY003",
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"ckanext/charts/tests*" = ["S", "PL"]
"ckanext/charts/logic/schema.py" = ["PLR0913"]
"ckanext/charts/chart_builders/plotly.py" = ["C901", "PLR0912"]
"mkdocstrings_handlers/ChartFieldsHandler/__init__.py" = ["N999"]

[tool.ruff.lint.isort.sections]
ckan = ["ckan"]
ckanext = ["ckanext"]
self = ["ckanext.charts"]

[tool.pytest.ini_options]
addopts = "--ckan-ini test.ini"
filterwarnings = [
    "ignore::DeprecationWarning",
]
