[metadata]
name = ckanext-charts
version = 0.0.2
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataShades/ckanext-charts
author = Sergey Motornyuk
author_email = sergey.motornyuk@linkdigital.com.au
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
            Programming Language :: Python :: 3.11

keywords = CKAN

[options]
python_requires = >= 3.8
packages = find:
namespace_packages = ckanext
install_requires =
                 typing-extensions>=4.4.0
include_package_data = True

[options.entry_points]
ckan.plugins =
             charts_view = ckanext.charts.plugin:ChartsViewPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]
pandas-ckan-2.10 =
       pandas<2.2.0

plotly =
       plotly

test =
     pytest-ckan
     ckanext-toolbelt

dev =
    %(test)s

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/charts/i18n/ckanext-charts.pot
width = 80

[init_catalog]
domain = ckanext-charts
input_file = ckanext/charts/i18n/ckanext-charts.pot
output_dir = ckanext/charts/i18n

[update_catalog]
domain = ckanext-charts
input_file = ckanext/charts/i18n/ckanext-charts.pot
output_dir = ckanext/charts/i18n
previous = true

[compile_catalog]
domain = ckanext-charts
directory = ckanext/charts/i18n
statistics = true
