[metadata]
name = ckanext-charts
version = 1.1.0
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataShades/ckanext-charts
author = Sergey Motornyuk
author_email = sergey.motornyuk@linkdigital.com.au
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
            Programming Language :: Python :: 3.11

keywords = CKAN

[options]
python_requires = >= 3.8
packages = find:
namespace_packages = ckanext
install_requires =
                 typing-extensions>=4.3.0
                 pandas>=2.0.0,<3.0.0
                 plotly>=5.21.0,<6.0.0
                 redis>=5.0.0,<6.0.0
                 ckanext-scheming

include_package_data = True

[options.entry_points]
ckan.plugins =
             charts_view = ckanext.charts.plugin:ChartsViewPlugin
             charts_builder_view = ckanext.charts.plugin:ChartsBuilderViewPlugin

babel.extractors =
             ckan = ckan.lib.extract:extract_ckan

[options.extras_require]
pyarrow =
        pyarrow>=16.0.0,<17.0.0

test =
     pytest-ckan
     ckanext-toolbelt

dev =
    %(test)s

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/charts/i18n/ckanext-charts.pot
width = 80

[init_catalog]
domain = ckanext-charts
input_file = ckanext/charts/i18n/ckanext-charts.pot
output_dir = ckanext/charts/i18n

[update_catalog]
domain = ckanext-charts
input_file = ckanext/charts/i18n/ckanext-charts.pot
output_dir = ckanext/charts/i18n
previous = true

[compile_catalog]
domain = ckanext-charts
directory = ckanext/charts/i18n
statistics = true
