[options]
namespace_packages = ckanext

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/charts/i18n/ckanext-charts.pot
width = 80

[init_catalog]
domain = ckanext-charts
input_file = ckanext/charts/i18n/ckanext-charts.pot
output_dir = ckanext/charts/i18n

[update_catalog]
domain = ckanext-charts
input_file = ckanext/charts/i18n/ckanext-charts.pot
output_dir = ckanext/charts/i18n
previous = true

[compile_catalog]
domain = ckanext-charts
directory = ckanext/charts/i18n
statistics = true
